fix horizontal scroll

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -8,6 +8,7 @@
 }
 html {
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 body {
   min-height: 100vh;
