--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,17 +1,32 @@
 body {
   font-family: "Josefin Sans", sans-serif;
   font-size: 1.6rem;
+  // background-image: url("../images/bg-pattern-desktop.svg");
+  // background-repeat: no-repeat;
 }
 .paragraph {
   &__main {
+    line-height: 1.8;
+    letter-spacing: 0.5px;
   }
 }
 .title {
+  text-transform: uppercase;
+  font-size: 6rem;
+  line-height: 1.1;
+  letter-spacing: 2rem;
   &__block {
+    margin-bottom: 3rem;
   }
 
   &__brand {
+    display: block;
     &_color {
+      color: var(--clr-dark-grayish-red);
+      letter-spacing: 1.5rem;
+    }
+    &_thin {
+      font-weight: 300;
     }
   }
 }
